--- a/angularapp/src/app/useraddappointment/useraddappointment.component.html
+++ b/angularapp/src/app/useraddappointment/useraddappointment.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <!-- Header -->
-    <h1 class="header mt-4 mb-4">Available Services & Service Centers</h1>
+    <h1 class="header mt-4 mb-4">Available Services</h1>
   
     <!-- Carousel -->
-    <div id="carouselExample" class="carousel slide mb-5" data-bs-ride="carousel">
+    <!-- <div id="carouselExample" class="carousel slide mb-5" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="/assets/carimage.webp" class="d-block w-100" alt="Service Worker Repairing Vehicle">
@@ -23,7 +23,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-    </div>
+    </div> -->
   
     <!-- Search Container -->
     <div class="search-container mb-3">
