--- a/angularapp/src/app/map/map.component.css
+++ b/angularapp/src/app/map/map.component.css
@@ -7,3 +7,21 @@
   .map-container iframe {
     border-radius: 8px;
   }
+
+/* Card heading styling */
+.card-heading {
+  background-color: #575757;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+.card-heading h1 {
+  font-size: 2rem;
+  margin: 0;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
