--- a/angularapp/src/app/map/map.component.html
+++ b/angularapp/src/app/map/map.component.html
@@ -1,8 +1,13 @@
 <!-- Service Centers Map Section -->
 <div class="section-container map-container">
-    <h2>Find Our Service Centers</h2>
+    <h2 class="card-heading">Find Our Service Centers</h2>
     <div id="map-container">
-        <iframe src="https://www.google.com/maps/d/embed?mid=1UC4xAYS_S815VGTPp748fauAsVvJAUs&ehbc=2E312F"
+        <!-- <iframe src="https://www.google.com/maps/d/embed?mid=1UC4xAYS_S815VGTPp748fauAsVvJAUs&ehbc=2E312F"
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+        
+        <iframe src="https://www.google.com/maps/d/embed?mid=1d0lHH1MLC0002RDLLoAni0JSwEpQpq8&ehbc=2E312F"  width="100%" height="450" style="border:0;"  loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+
+<app-footer></app-footer>
